--- a/doc/locale/fr/LC_MESSAGES/changelog.po
+++ b/doc/locale/fr/LC_MESSAGES/changelog.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Sigima \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-10-15 10:29+0200\n"
+"POT-Creation-Date: 2025-10-16 09:56+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: fr\n"
@@ -694,6 +694,21 @@ msgstr "La conversion entre les coordonnées physiques et les indices a été co
 
 msgid "The `indices_to_physical` and `physical_to_indices` methods now raise a `ValueError` if the input does not contain an even number of elements (x, y pairs)."
 msgstr "La méthode `indices_to_physical` et `physical_to_indices` lèvent désormais une `ValueError` si l'entrée ne contient pas un nombre pair d'éléments (paires x, y)."
+
+msgid "🔒 Security fixes:"
+msgstr "🔒 Corrections de sécurité:"
+
+msgid "**Dependency vulnerability fix**: Fixed CVE-2023-4863 vulnerability in opencv-python-headless"
+msgstr "**Correction de vulnérabilité de dépendance**: Correction de la vulnérabilité CVE-2023-4863 dans opencv-python-headless"
+
+msgid "Updated minimum requirement from 4.5.4.60 to 4.8.1.78"
+msgstr "Mise à jour de l'exigence minimale de 4.5.4.60 à 4.8.1.78"
+
+msgid "Addresses libwebp binaries vulnerability in bundled OpenCV wheels"
+msgstr "Correction de la vulnérabilité des binaires libwebp dans les paquets Wheel OpenCV"
+
+msgid "See [DataLab security advisory](https://github.com/DataLab-Platform/DataLab/security/dependabot/1) for details"
+msgstr "Voir l'[avis de sécurité DataLab](https://github.com/DataLab-Platform/DataLab/security/dependabot/1) pour plus de détails."
 
 msgid "sigima 0.2.0"
 msgstr "sigima 0.2.0"
